--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,33 @@
 {
-    "compilerOptions": {
-      "target": "es5", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
-      "module": "commonjs", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
-      /* FIXME: update the module mode to es2015. This will break the tests */
-      "lib": [
-        "DOM",
-        "es5"
-      ], /* Specify library files to be included in the compilation. */
-      "allowJs": true, /* Allow javascript files to be compiled. */
-      "outDir": "dist", /* Redirect output structure to the directory. */
-      "strict": true, /* Enable all strict type-checking options. */
-      "noImplicitAny": true, /* Raise error on expressions and declarations with an implied 'any' type. */
-      "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
-      "moduleResolution": "node",  /* Recommended for supporting vue */
-      "resolveJsonModule": true, /* Include modules imported with '.json' extension */
-      "forceConsistentCasingInFileNames": true, /* Disallow inconsistently-cased references to the same file. */
-      "incremental": true, /* Set typescript to use incremental builds. Hopefully speeds up build time*/
-      
-      /* FIXME: update module to es2015, then update all code to use these paths */
-      "baseUrl": ".",
-      "paths": {
-        "@src/*": ["src/"]
-      }
-    },
-    "include": [
-      "src/**/*.ts"
-    ],
-    "exclude": [
-      "node_modules",
-      "tst"
-    ]
-  }
+  "compilerOptions": {
+    "target": "es5", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
+    "module": "commonjs", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
+    /* FIXME: update the module mode to es2015. This will break the tests */
+    "lib": [
+      "DOM",
+      "es5"
+    ], /* Specify library files to be included in the compilation. */
+    "allowJs": true, /* Allow javascript files to be compiled. */
+    "outDir": "dist", /* Redirect output structure to the directory. */
+    "strict": true, /* Enable all strict type-checking options. */
+    "noImplicitAny": true, /* Raise error on expressions and declarations with an implied 'any' type. */
+    "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+    "moduleResolution": "node",  /* Recommended for supporting vue */
+    "resolveJsonModule": true, /* Include modules imported with '.json' extension */
+    "forceConsistentCasingInFileNames": true, /* Disallow inconsistently-cased references to the same file. */
+    "incremental": true, /* Set typescript to use incremental builds. Hopefully speeds up build time*/
+    
+    /* FIXME: update module to es2015, then update all code to use these paths */
+    "baseUrl": ".",
+    "paths": {
+      "@src/*": ["src/"]
+    }
+  },
+  "include": [
+    "src/**/*.ts", "src/lib/environment.js"
+  ],
+  "exclude": [
+    "node_modules",
+    "tst"
+  ]
+}
